<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:elevation="0dp"
        tools:targetApi="lollipop">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@android:color/white"
            app:contentScrim="@android:color/transparent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:titleEnabled="false">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_bg_dashboard"
                app:layout_collapseMode="parallax" />

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start|top"
                android:layout_marginTop="25dp"
                app:contentInsetStart="0dp"
                app:layout_collapseMode="pin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|center_vertical"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="20dp">

                        <LinearLayout
                            android:id="@+id/leftMenuLyt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:layout_marginRight="10dp"
                            android:gravity="center">

                            <ImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:adjustViewBounds="true"
                                android:contentDescription="@null"
                                android:scaleType="centerCrop"
                                android:src="@drawable/ic_coronavirus"
                                android:tintMode="src_in"
                                app:tint="@android:color/white" />
                        </LinearLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@+id/leftMenuLyt"
                            android:layout_toRightOf="@+id/leftMenuLyt"
                            android:fontFamily="@font/neo_sans_bold"
                            android:gravity="center"
                            android:text="@string/app_name"
                            android:textColor="@android:color/white"
                            android:textSize="18sp" />

                        <ImageView
                            android:id="@+id/btnLogout"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_toStartOf="@+id/btnSort"
                            android:layout_toLeftOf="@+id/btnSort"
                            android:rotation="180"
                            android:src="@drawable/ic_logout" />

                        <ImageView
                            android:id="@+id/btnSort"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_toStartOf="@+id/btnFilter"
                            android:layout_toLeftOf="@+id/btnFilter"
                            android:src="@drawable/ic_sort" />

                        <ImageView
                            android:id="@+id/btnFilter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_toStartOf="@+id/btnRefresh"
                            android:layout_toLeftOf="@+id/btnRefresh"
                            android:src="@drawable/ic_filter" />

                        <ImageView
                            android:id="@+id/btnRefresh"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:src="@drawable/ic_baseline_refresh_24" />
                    </RelativeLayout>

                </LinearLayout>


            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="10dp"
        app:behavior_overlapTop="100dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:id="@+id/searchLyt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edit_text_square"
            android:visibility="gone"
            tools:visibility="visible">

            <AutoCompleteTextView
                android:id="@+id/searchEdt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:hint="@string/label_cari_provinsi"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textSize="12sp"
                tools:ignore="Autofill,LabelFor" />

            <LinearLayout
                android:id="@+id/searchDrawableLyt"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:gravity="center">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/searchDrawable"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_search"
                    android:tint="#BDBDBD" />
            </LinearLayout>
        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvBase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/searchLyt"/>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

        <RelativeLayout
            android:id="@+id/errorLyt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center_horizontal"
                android:textAlignment="center"
                tools:text="Telah terjadi error" />

            <Button
                android:id="@+id/btnError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvError"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/label_refresh" />
        </RelativeLayout>

    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>